# edge-egress-grpc

./: CHANGELOG.md  Cargo.toml  README.md  bootstrap.ps1  bootstrap.sh
auth-bearer/: CHANGELOG.md  Cargo.toml
auth-bearer/config/: application.toml
auth-bearer/src/api/: bearer_outbound_interceptor.rs  metadata_keys.rs  mod.rs
auth-bearer/src/core/: bearer_inbound_interceptor.rs  bearer_outbound_interceptor.rs  jwt_claims.rs  mod.rs
auth-bearer/src/saf/: mod.rs
auth-bearer/tests/: bearer_round_trip_int_test.rs  jwt_claims_int_test.rs
auth-mtls/: CHANGELOG.md  Cargo.toml
auth-mtls/docs/: threat_model.md
auth-mtls/src/api/: mod.rs
auth-mtls/src/core/: mod.rs  mtls_auth_interceptor.rs
auth-mtls/src/saf/: mod.rs
auth-mtls/tests/: mtls_auth_interceptor_int_test.rs
breaker/: CHANGELOG.md  Cargo.toml  README.md
breaker/config/: application.toml
breaker/docs/: README.md
breaker/src/api/: breaker_client.rs  breaker_config.rs  breaker_state.rs  builder.rs  error.rs  failure_kind.rs  traits.rs  transitions.rs
breaker/src/core/: breaker_client.rs  transitions.rs
breaker/tests/: breaker_int_test.rs
main/features/auth-bearer/: Cargo.toml  README.md
main/features/breaker/: Cargo.toml
main/features/resilient/: CHANGELOG.md  Cargo.toml
main/features/transport/: CHANGELOG.md  Cargo.toml  README.md
main/retry/: CHANGELOG.md  Cargo.toml
main/retry/docs/: README.md
main/retry/tests/: grpc_retry_client_int_test.rs  resource_exhausted_context_int_test.rs  retry_domain_error_int_test.rs  retry_egress_int_test.rs
retry/: Cargo.toml  README.md
retry/src/: lib.rs
retry/src/api/: backoff.rs  builder.rs  error.rs  retry_client.rs  retry_config.rs  retry_policy.rs  traits.rs
retry/src/core/: backoff.rs  retry_client.rs
retry/src/saf/: builder.rs  mod.rs
retry/tests/: retry_int_test.rs
scm/: Cargo.toml  audit_full.txt  audit_output.txt
scm/auth-bearer/: Cargo.toml  README.md
scm/auth-bearer/docs/: threat_model.md
scm/auth-bearer/tests/: application_config_builder_int_test.rs  bearer_auth_error_int_test.rs  bearer_egress_config_builder_int_test.rs  bearer_egress_config_int_test.rs  bearer_egress_interceptor_int_test.rs  bearer_secret_int_test.rs  grpc_auth_bearer_svc_int_test.rs  jwt_claims_builder_int_test.rs  jwt_claims_int_test.rs  metadata_keys_int_test.rs  processor_int_test.rs  subtle_int_test.rs  validator_int_test.rs
scm/breaker/: Cargo.toml  README.md
scm/breaker/examples/: grpc_breaker.rs
scm/breaker/tests/: admission_int_test.rs  admit_request_int_test.rs  admit_response_int_test.rs  application_config_builder_int_test.rs  breaker_config_int_test.rs  breaker_decorator_e2e_test.rs  breaker_decorator_svc_factory_int_test.rs  breaker_domain_error_int_test.rs  breaker_egress_core_int_test.rs  breaker_egress_int_test.rs  breaker_int_test.rs  breaker_observable_e2e_test.rs  breaker_observable_svc_factory_int_test.rs  breaker_state_int_test.rs  breaker_transition_e2e_test.rs  breaker_transition_int_test.rs  breaker_transition_svc_factory_int_test.rs  breaker_transitions_int_test.rs  classify_request_int_test.rs  classify_response_int_test.rs  config_builder_provider_e2e_test.rs  config_builder_provider_svc_factory_int_test.rs  config_builder_request_int_test.rs  config_builder_response_int_test.rs  config_validation_request_int_test.rs  describe_request_int_test.rs  describe_response_int_test.rs  error_int_test.rs  failure_classifier_e2e_test.rs  failure_classifier_svc_factory_int_test.rs  failure_kind_int_test.rs  grpc_breaker_client_int_test.rs  grpc_breaker_client_types_int_test.rs  grpc_breaker_config_int_test.rs  grpc_breaker_facade_int_test.rs  grpc_breaker_svc_int_test.rs  node_int_test.rs  observe_state_request_int_test.rs  observe_state_response_int_test.rs  outcome_int_test.rs  (+10 more)
scm/docs/: README.md  architecture.md
scm/docs/adr/: ADR-001-egress-grpc-security-specialisations.md  ADR-002-security-context-propagation.md
scm/resilient/: Cargo.toml
scm/resilient/config/: application.toml
scm/resilient/docs/: README.md
scm/resilient/tests/: application_config_builder_int_test.rs  assembler_int_test.rs  assembly_int_test.rs  config_builder_provider_e2e_test.rs  config_builder_provider_svc_factory_int_test.rs  config_builder_request_int_test.rs  config_builder_response_int_test.rs  config_validation_request_int_test.rs  describe_request_int_test.rs  describe_response_int_test.rs  error_int_test.rs  factory_int_test.rs  grpc_resilient_facade_int_test.rs  grpc_resilient_svc_int_test.rs  grpc_resilient_svc_processor_int_test.rs  processor_e2e_test.rs  processor_int_test.rs  processor_svc_factory_int_test.rs  resilience_config_int_test.rs  resilient_stack_int_test.rs  resilient_svc_int_test.rs  resilient_transport_error_int_test.rs  validator_e2e_test.rs  validator_int_test.rs  validator_svc_factory_int_test.rs
scm/retry/: Cargo.toml  README.md
scm/retry/examples/: grpc_retry.rs
scm/retry/tests/: application_config_builder_int_test.rs  backoff_schedule_int_test.rs  backoff_schedule_request_int_test.rs  backoff_scheduler_e2e_test.rs  backoff_scheduler_svc_factory_int_test.rs  backoff_track_int_test.rs  config_builder_provider_e2e_test.rs  config_builder_provider_svc_factory_int_test.rs  config_builder_request_int_test.rs  config_builder_response_int_test.rs  default_processor_int_test.rs  describe_policy_request_int_test.rs  describe_policy_response_int_test.rs  error_int_test.rs  grpc_retry_client_int_test.rs  grpc_retry_config_builder_int_test.rs  grpc_retry_config_int_test.rs  grpc_retry_facade_int_test.rs  grpc_retry_svc_int_test.rs  jitter_rng_e2e_test.rs  jitter_rng_int_test.rs  jitter_rng_svc_factory_int_test.rs  next_unit_request_int_test.rs  next_unit_response_int_test.rs  processor_e2e_test.rs  processor_int_test.rs  processor_request_int_test.rs  processor_svc_factory_int_test.rs  resource_exhausted_context_int_test.rs  retry_decision_int_test.rs  retry_decorator_e2e_test.rs  retry_decorator_svc_factory_int_test.rs  retry_egress_int_test.rs  retry_int_test.rs  (+9 more)
scm/transport/: CHANGELOG.md  Cargo.toml  README.md
(+1214 files in other folders)
