[workspace]
resolver = "2"
members  = [
    "main/features/auth-bearer",
    "main/features/breaker",
    "main/features/resilient",
    "main/features/retry",
    "main/features/transport",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge"

[workspace.dependencies]
# Common
serde       = { version = "1.0", features = ["derive"] }
thiserror   = "2"
async-trait = "0.1"
futures     = "0.3"
tokio       = { version = "1.0", features = ["rt", "sync", "time", "macros", "net"] }
tracing     = "0.1"
toml        = "0.8"
http        = "1"

# Workspace-internal gRPC transport + interceptor crates
swe-edge-egress-grpc             = { package = "swe-edge-egress-grpc-transport", path = "main/features/transport" }
swe-edge-egress-grpc-auth-bearer = { path = "main/features/auth-bearer" }
swe-edge-egress-grpc-retry       = { path = "main/features/retry" }
swe-edge-egress-grpc-breaker     = { path = "main/features/breaker" }
swe-edge-egress-grpc-resilient   = { path = "main/features/resilient" }

[workspace.lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"
