[workspace]
resolver = "2"
members  = ["main/auth-bearer","main/breaker","main/resilient","main/retry","main/transport"]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge-egress-grpc"

[workspace.lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[workspace.dependencies]
edge-domain            = { git = "https://github.com/sweengineeringlabs/edge-domain.git", branch = "dev" }
swe-edge-configbuilder = { git = "https://github.com/sweengineeringlabs/edge-configbuilder.git", branch = "dev" }
swe-observ-metrics     = { package = "swe_justobserv_metrics", git = "ssh://git@github.com/sweengineeringlabs/justobserv.git", tag = "v0.2.1" }
swe_justobserv_context = { git = "ssh://git@github.com/sweengineeringlabs/justobserv.git", tag = "v0.2.1" }
swe-edge-egress-grpc             = { package = "swe-edge-egress-grpc-transport", path = "main/transport" }
swe-edge-egress-grpc-auth-bearer = { path = "main/auth-bearer" }
swe-edge-egress-grpc-breaker     = { path = "main/breaker" }
swe-edge-egress-grpc-resilient   = { path = "main/resilient" }
swe-edge-egress-grpc-retry       = { path = "main/retry" }
serde       = { version = "1.0", features = ["derive"] }
thiserror   = "2"
futures     = "0.3"
tokio       = { version = "1.0", features = ["rt", "sync", "time", "macros", "net"] }
tracing     = "0.1"
toml        = "0.8"
http        = "1"
