[package]
name = "swe-edge-egress-grpc-auth-bearer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Symmetric JWT bearer interceptors — outbound injects, inbound validates and surfaces identity"
keywords = ["grpc", "jwt", "bearer", "auth", "interceptor"]
categories = ["network-programming", "authentication"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "processor"

[lib]
path = "src/lib.rs"

[dependencies]
swe-edge-egress-grpc  = { workspace = true }
swe-edge-ingress-grpc = { package = "swe-edge-ingress-grpc-transport", path = "../../../ingress/grpc/transport" }
thiserror     = { workspace = true }
async-trait   = { workspace = true }
futures       = { workspace = true }
serde         = { workspace = true }
toml          = { workspace = true }
tracing       = { workspace = true }
# JWT sign + verify (HS256 / RS256).  Default features include
# `use_pem` which we need for RS256 PEM-key construction.
jsonwebtoken  = "9"
# Constant-time comparisons for symmetric-secret material.
subtle        = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
