[package]
name = "swe-edge-egress-grpc-auth-mtls"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "mTLS-based GrpcInboundInterceptor — rejects calls when no peer identity is present in GrpcMetadata"
keywords = ["grpc", "mtls", "auth", "interceptor", "swe"]
categories = ["network-programming", "authentication"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "processor"

[lib]
path = "src/lib.rs"

[dependencies]
# Cross-workspace path dep: this crate ships an inbound interceptor
# for the ingress server.  The egress workspace doesn't otherwise
# pull ingress in, so the path is direct.
swe-edge-ingress-grpc = { package = "swe-edge-ingress-grpc-transport", path = "../../../ingress/grpc/transport" }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
