[workspace]
resolver = "2"
members  = ["transport", "auth-bearer", "breaker", "resilient", "retry"]

[workspace.package]
version      = "0.5.0"
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge-egress-grpc"

[workspace.lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[workspace.dependencies]
edge-application            = { git = "https://github.com/sweengineeringlabs/edge-application.git", tag = "v0.16.0", features = ["security"] }
swe-edge-configbuilder = { git = "https://github.com/sweengineeringlabs/edge-configbuilder.git", tag = "v0.3.0" }
swe-edge-security      = { git = "https://github.com/sweengineeringlabs/edge-security.git", tag = "v0.3.4" }
swe-observ-metrics     = { package = "swe_justobserv_metrics", git = "ssh://git@github.com/sweengineeringlabs/justobserv.git", tag = "v0.2.1" }
swe_justobserv_context = { git = "ssh://git@github.com/sweengineeringlabs/justobserv.git", tag = "v0.2.1" }
swe-edge-egress-grpc             = { package = "swe-edge-egress-grpc-transport", path = "transport" }
swe-edge-egress-grpc-auth-bearer = { path = "auth-bearer" }
swe-edge-egress-grpc-breaker     = { path = "breaker" }
swe-edge-egress-grpc-resilient   = { path = "resilient" }
swe-edge-egress-grpc-retry       = { path = "retry" }
swe-edge-loadbalancer  = { git = "https://github.com/sweengineeringlabs/edge-loadbalancer.git", tag = "v0.2.0" }
serde       = { version = "1.0", features = ["derive"] }
thiserror   = "2"
futures     = "0.3"
tokio       = { version = "1.52", features = ["rt", "sync", "time", "macros", "net"] }
tracing     = "0.1"
toml        = "0.8"
http        = "1"
