[package]
name = "swe-edge-egress-grpc-retry"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Decorator: gRPC-aware retry around any GrpcEgress"
keywords = ["grpc", "retry", "tonic", "decorator", "swe"]
categories = ["network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "processor"

[lib]
path = "src/lib.rs"

[dependencies]
swe-edge-egress-grpc = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
# `from_config` loads policy from TOML. `serde` derives the
# schema; `toml` parses it. Policy values live in
# `config/application.toml` + consumer overrides — never as
# hardcoded literals in source.
serde = { workspace = true }
toml = { workspace = true }
swe-edge-configbuilder.workspace = true
tokio = { workspace = true, features = ["time", "sync", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }


[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[[test]]
name = "processor_int_test"
path = "tests/processor_int_test.rs"

[[test]]
name = "validator_int_test"
path = "tests/validator_int_test.rs"

[[test]]
name = "backoff_schedule_int_test"
path = "tests/backoff_schedule_int_test.rs"

[[test]]
name = "error_int_test"
path = "tests/error_int_test.rs"

[[test]]
name = "grpc_retry_client_int_test"
path = "tests/grpc_retry_client_int_test.rs"

[[test]]
name = "retry_decision_int_test"
path = "tests/retry_decision_int_test.rs"

[[test]]
name = "retry_int_test"
path = "tests/retry_int_test.rs"

[[test]]
name = "backoff_scheduler_int_test"
path = "tests/backoff_scheduler_int_test.rs"

[[test]]
name = "jitter_rng_int_test"
path = "tests/jitter_rng_int_test.rs"

[[test]]
name = "retry_domain_error_int_test"
path = "tests/retry_domain_error_int_test.rs"

[[test]]
name = "retry_egress_int_test"
path = "tests/retry_egress_int_test.rs"

[[test]]
name = "application_config_builder_int_test"
path = "tests/application_config_builder_int_test.rs"

[[test]]
name = "grpc_retry_config_int_test"
path = "tests/grpc_retry_config_int_test.rs"

[[test]]
name = "grpc_retry_config_builder_int_test"
path = "tests/grpc_retry_config_builder_int_test.rs"

[[test]]
name = "retry_egress_core_int_test"
path = "tests/retry_egress_core_int_test.rs"

[[test]]
name = "grpc_retry_svc_int_test"
path = "tests/grpc_retry_svc_int_test.rs"

[[test]]
name = "resource_exhausted_context_int_test"
path = "tests/resource_exhausted_context_int_test.rs"

[[test]]
name = "default_processor_int_test"
path = "tests/default_processor_int_test.rs"
