[package]
name = "swe-edge-egress-grpc-breaker"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Decorator: gRPC-aware circuit breaker around any GrpcEgress"
keywords = ["grpc", "circuit-breaker", "tonic", "decorator", "swe"]
categories = ["network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "processor"

[lib]
path = "main/src/lib.rs"

[dependencies]
swe-edge-egress-grpc = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
# `from_config` loads policy from TOML. `serde` derives the
# schema; `toml` parses it. Policy values live in
# `config/application.toml` + consumer overrides — never as
# hardcoded literals in source.
serde = { workspace = true }
toml = { workspace = true }
swe-edge-configbuilder.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }


[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[[test]]
name = "processor_int_test"
path = "tests/processor_int_test.rs"

[[test]]
name = "validator_int_test"
path = "tests/validator_int_test.rs"

[[test]]
name = "breaker_int_test"
path = "tests/breaker_int_test.rs"

[[test]]
name = "breaker_config_int_test"
path = "tests/breaker_config_int_test.rs"

[[test]]
name = "admission_int_test"
path = "tests/admission_int_test.rs"

[[test]]
name = "breaker_state_int_test"
path = "tests/breaker_state_int_test.rs"

[[test]]
name = "breaker_transition_int_test"
path = "tests/breaker_transition_int_test.rs"

[[test]]
name = "breaker_egress_int_test"
path = "tests/breaker_egress_int_test.rs"

[[test]]
name = "error_int_test"
path = "tests/error_int_test.rs"

[[test]]
name = "failure_kind_int_test"
path = "tests/failure_kind_int_test.rs"

[[test]]
name = "grpc_breaker_client_int_test"
path = "tests/grpc_breaker_client_int_test.rs"

[[test]]
name = "grpc_breaker_config_int_test"
path = "tests/grpc_breaker_config_int_test.rs"

[[test]]
name = "node_int_test"
path = "tests/node_int_test.rs"

[[test]]
name = "outcome_int_test"
path = "tests/outcome_int_test.rs"

[[test]]
name = "breaker_domain_error_int_test"
path = "tests/breaker_domain_error_int_test.rs"

[[test]]
name = "breaker_transitions_int_test"
path = "tests/breaker_transitions_int_test.rs"

[[test]]
name = "application_config_builder_int_test"
path = "tests/application_config_builder_int_test.rs"

[[test]]
name = "grpc_breaker_client_types_int_test"
path = "tests/grpc_breaker_client_types_int_test.rs"

[[test]]
name = "breaker_egress_core_int_test"
path = "tests/breaker_egress_core_int_test.rs"

[[test]]
name = "grpc_breaker_svc_int_test"
path = "tests/grpc_breaker_svc_int_test.rs"
