[package]
name         = "swe-edge-egress-grpc-resilient"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description  = "edge — assembled resilient gRPC transport: TonicGrpcClient + retry + circuit breaker"
keywords     = ["grpc", "resilience", "retry", "circuit-breaker", "swe"]
categories   = ["network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "processor"

[package.metadata.arch]
application_type = "lib"
service_type     = "processor"

[lib]
path = "main/src/lib.rs"

[dependencies]
swe-edge-egress-grpc         = { workspace = true }
swe-edge-egress-grpc-retry   = { workspace = true }
swe-edge-egress-grpc-breaker = { workspace = true }
thiserror              = { workspace = true }
swe-edge-configbuilder = { workspace = true }

[dev-dependencies]
tokio   = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
futures = { workspace = true }
rustls  = { version = "0.23", features = ["aws-lc-rs"] }
serde   = { workspace = true }


[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
