[package]
name = "swe-edge-egress-grpc-auth-bearer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "JWT bearer GrpcEgressInterceptor — signs and injects Bearer tokens into outgoing gRPC requests"
keywords = ["grpc", "jwt", "bearer", "auth", "interceptor"]
categories = ["network-programming", "authentication"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "processor"

[lib]
path = "src/lib.rs"

[[example]]
name = "auth_bearer"
path = "examples/auth_bearer.rs"

[[test]]
name = "jwt_claims_int_test"
path = "tests/jwt_claims_int_test.rs"

[[test]]
name = "bearer_auth_error_int_test"
path = "tests/bearer_auth_error_int_test.rs"

[[test]]
name = "bearer_secret_int_test"
path = "tests/bearer_secret_int_test.rs"

[[test]]
name = "bearer_egress_interceptor_int_test"
path = "tests/bearer_egress_interceptor_int_test.rs"

[[test]]
name = "metadata_keys_int_test"
path = "tests/metadata_keys_int_test.rs"

[[test]]
name = "grpc_auth_bearer_svc_int_test"
path = "tests/grpc_auth_bearer_svc_int_test.rs"

[[test]]
name = "application_config_builder_int_test"
path = "tests/application_config_builder_int_test.rs"

[[test]]
name = "validator_int_test"
path = "tests/validator_int_test.rs"

[[test]]
name = "bearer_egress_config_int_test"
path = "tests/bearer_egress_config_int_test.rs"

[dependencies]
swe-edge-egress-grpc = { workspace = true }
thiserror    = { workspace = true }
serde         = { workspace = true }
tracing       = { workspace = true }
# JWT sign + verify (HS256 / RS256).  Default features include
# `use_pem` which we need for RS256 PEM-key construction.
swe-edge-configbuilder = { workspace = true }
jsonwebtoken  = "9"
# Constant-time comparisons for symmetric-secret material.
subtle        = "2"

[dev-dependencies]
tokio  = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
subtle = "2"


[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[[test]]
name = "processor_int_test"
path = "tests/processor_int_test.rs"

[[test]]
name = "subtle_int_test"
path = "tests/subtle_int_test.rs"
