[package]
name         = "swe-edge-egress-grpc-transport"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description  = "edge — egress gRPC outbound domain: request/response types and outbound trait."
keywords     = ["gateway", "egress", "grpc", "sea", "swe"]
categories   = ["network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "processor"

[lib]
path = "src/lib.rs"

[features]
default = []

[[example]]
name = "basic_transport"
path = "examples/basic_transport.rs"

[dependencies]
serde.workspace       = true
thiserror.workspace   = true
futures.workspace     = true
bytes            = "1"
http             = { workspace = true }
http-body-util   = "0.1"
hyper-util       = { version = "0.1", features = ["client-legacy", "tokio", "http2"] }
hyper-rustls     = { version = "0.27", features = ["http2", "webpki-tokio"] }
tokio                  = { version = "1", features = ["rt", "net", "time", "macros"] }
swe-edge-configbuilder = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", tag = "v0.4.5" }
tokio-util       = { version = "0.7", default-features = false }
tonic            = { version = "0.12", default-features = false }
tracing          = { workspace = true }

[dev-dependencies]
rustls     = { version = "0.23", features = ["aws-lc-rs"] }
toml       = "0.8"
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
hyper      = { version = "1", features = ["http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
bytes      = "1"
http-body      = "1"
http-body-util = "0.1"
futures    = "0.3"
tonic      = { version = "0.12", default-features = false }
