[package]
name         = "swe-edge-egress-grpc-transport"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description  = "edge — egress gRPC outbound domain: request/response types and outbound trait."
keywords     = ["gateway", "egress", "grpc", "sea", "swe"]
categories   = ["network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "processor"

[lib]
path = "src/lib.rs"

[features]
default = []

[[example]]
name = "basic_transport"
path = "examples/basic_transport.rs"

[[test]]
name = "grpc_client_builder_int_test"
path = "tests/grpc_client_builder_int_test.rs"

[[test]]
name = "trace_context_source_int_test"
path = "tests/trace_context_source_int_test.rs"

[[test]]
name = "grpc_channel_config_error_int_test"
path = "tests/grpc_channel_config_error_int_test.rs"

[[test]]
name = "grpc_egress_error_int_test"
path = "tests/grpc_egress_error_int_test.rs"

[[test]]
name = "grpc_egress_result_int_test"
path = "tests/grpc_egress_result_int_test.rs"

[[test]]
name = "conversions_int_test"
path = "tests/conversions_int_test.rs"

[[test]]
name = "compression_mode_int_test"
path = "tests/compression_mode_int_test.rs"

[[test]]
name = "grpc_metadata_int_test"
path = "tests/grpc_metadata_int_test.rs"

[[test]]
name = "grpc_request_int_test"
path = "tests/grpc_request_int_test.rs"

[[test]]
name = "grpc_response_int_test"
path = "tests/grpc_response_int_test.rs"

[[test]]
name = "grpc_status_code_int_test"
path = "tests/grpc_status_code_int_test.rs"

[[test]]
name = "mtls_config_int_test"
path = "tests/mtls_config_int_test.rs"

[[test]]
name = "grpc_egress_interceptor_int_test"
path = "tests/grpc_egress_interceptor_int_test.rs"

[[test]]
name = "grpc_egress_interceptor_chain_int_test"
path = "tests/grpc_egress_interceptor_chain_int_test.rs"

[[test]]
name = "tonic_grpc_client_int_test"
path = "tests/tonic_grpc_client_int_test.rs"

[[test]]
name = "transport_svc_int_test"
path = "tests/transport_svc_int_test.rs"

[[test]]
name = "grpc_egress_int_test"
path = "tests/grpc_egress_int_test.rs"

[[test]]
name = "processor_int_test"
path = "tests/processor_int_test.rs"

[[test]]
name = "grpc_channel_config_int_test"
path = "tests/grpc_channel_config_int_test.rs"

[[test]]
name = "validator_int_test"
path = "tests/validator_int_test.rs"

[[test]]
name = "tonic_grpc_client_builder_int_test"
path = "tests/tonic_grpc_client_builder_int_test.rs"

[[test]]
name = "trace_context_interceptor_int_test"
path = "tests/trace_context_interceptor_int_test.rs"

[[test]]
name = "grpc_message_stream_int_test"
path = "tests/grpc_message_stream_int_test.rs"

[[test]]
name = "resilience_validator_int_test"
path = "tests/resilience_validator_int_test.rs"

[[test]]
name = "resilient_grpc_client_port_int_test"
path = "tests/resilient_grpc_client_port_int_test.rs"

[[test]]
name = "traits_int_test"
path = "tests/traits_int_test.rs"

[[test]]
name = "grpc_channel_config_builder_int_test"
path = "tests/grpc_channel_config_builder_int_test.rs"

[[test]]
name = "grpc_request_builder_int_test"
path = "tests/grpc_request_builder_int_test.rs"

[[test]]
name = "keep_alive_config_int_test"
path = "tests/keep_alive_config_int_test.rs"

[[test]]
name = "resilience_config_int_test"
path = "tests/resilience_config_int_test.rs"

[[test]]
name = "resilience_config_builder_int_test"
path = "tests/resilience_config_builder_int_test.rs"

[dependencies]
serde.workspace       = true
thiserror.workspace   = true
futures.workspace     = true
bytes            = "1"
http             = { workspace = true }
http-body-util   = "0.1"
hyper-util       = { version = "0.1", features = ["client-legacy", "tokio", "http2"] }
hyper-rustls     = { version = "0.27", features = ["http2", "webpki-tokio"] }
tokio                  = { version = "1", features = ["rt", "net", "time", "macros"] }
swe-edge-configbuilder = { workspace = true }
tokio-util       = { version = "0.7", default-features = false }
tonic            = { version = "0.12", default-features = false }
tracing          = { workspace = true }

[dev-dependencies]
rustls     = { version = "0.23", features = ["aws-lc-rs"] }
toml       = "0.8"
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
hyper      = { version = "1", features = ["http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
bytes      = "1"
http-body      = "1"
http-body-util = "0.1"
futures    = "0.3"
tonic      = { version = "0.12", default-features = false }


[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
